--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,6 +16,24 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
+      <% if @isTitleHilite %>
+        <th class='p-3 mb-2 bg-warning text-dark'><%= link_to "Movie Title", movies_path({sort: @toSort, m: "title", ratings: @map}), class: 'text-primary', id: 'title_header'%></th>
+      <% else %>
+        <th><%= link_to "Movie Title", movies_path({sort: @toSort, m: "title", ratings: @map}), class: 'text-primary', id: 'title_header'%></th>
+      <% end %>
+      <th>Rating</th>
+      <% if @isDateHilite %>
+        <th class='p-3 mb-2 bg-warning text-dark'><%= link_to "Release Date", movies_path({sort: @toSort, r: "date", ratings: @map}), class: 'text-primary', id: 'release_date_header'%></th>
+      <% else %>
+        <th><%= link_to "Release Date", movies_path({sort: @toSort, r: "date", ratings: @map}), class: 'text-primary', id: 'release_date_header'%></th>
+      <% end %>
+      <th>More Info</th>
+    </tr>
+  </thead>
+
+<table class="table table-striped col-md-12" id="movies">
+  <thead>
+    <tr>
       <th>Movie Title</th>
       <th>Rating</th>
       <th>Release Date</th>
